fluxcd/apps/production/nekomimi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/match-tag: "true"
    keel.sh/policy: force
    keel.sh/pollSchedule: '@every 1m'
    keel.sh/trigger: poll
  name: landing-nekomimi
  namespace: nekomimi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: landing
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
      - image: registry.wuhoo.xyz/jerry/nekomimi.org:latest
        imagePullPolicy: Always
        name: landing
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 128Mi
