fluxcd/apps/production/nekomimi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: landing-service-nekomimi
  namespace: nekomimi
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: landing
